<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <!--<item-->
    <!--android:id="@+id/navigation_favorites"-->
    <!--android:icon="@drawable/ic_dashboard_black_24dp"-->
    <!--android:title="@string/title_favorites" />-->

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_settings" />

</menu>