...
        <RelativeLayout
            android:id="@+id/search_bar_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <Spinner
                android:id="@+id/home_trans_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            </Spinner>
        </RelativeLayout>
    </LinearLayout>

...
