...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>
    <Spinner
        android:id="@+id/adv_trans_spinner"
        android:layout_width="wrap_content"
        android:layout_height="@+id/adv_search_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/adv_search_linear_layout">
    </Spinner>
...
