<resources>
    <string name="app_name">Blank Dictionary</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="title">The Blank Dictionary</string>
    <string name="default_button">Select Your Current Dictionary</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="manage_dictionary">Manage Your Dictionaries</string>

    <!--BEGIN TRANSLATION DIRECTIONS USED FOR THE APP -->
    <string-array name="bhutia_array">
        <item>English to Bhutia (Formal)</item>
        <item>English to Bhutia (Informal)</item>
        <item>Bhutia to English (Formal)</item>
        <item>Bhutia to English (Informal)</item>
        <item>Bhutia Script to English (Formal)</item>
        <item>Bhutia Script to English (Informal)</item>
    </string-array>

    <string-array name="english_array">
        <item>English to English</item>
    </string-array>
    <string name="about_button">About This App</string>
    <string name="ok">OK</string>
    <string name="resource_permission">The app needs to access file storage to store dictionary data.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_app_title">About This App</string>
    <string name="about_app_desc">
        Hello! This app is designed for people who speak lesser known languages and need a
        digital dictionary for reference. Since there are so many languages out there in the world
        that need digital dictionaries, we have created one massive mega dictionary that will contain
        all these individual dictionaries. That\'s why we\'re
        calling this \"Blank Dictionary\".
        \n\n
        To switch between a dictionary, just toggle between
        dictionaries in the settings. Return to the home page by pressing the home button in the
        bottom navigation menu and then proceed as you normally would.
        \n\n
        We also have other versions of this service as well! You can access the website on your
        computer or phone at www.blankdictionary.com. The website offers more or less the same things as the app,
        but it also contains a master word list for each dictionary. Furthermore, if you become a
        contributor to the app, you may edit and add dictionary content in a special administrative
        page.
        \n\n
        If you like what we do, please consider supporting us. This project is intended to grow
        with the support of local communities. We need your help to create dictionary content
        for a language of your choice, considering the thousands of words that need to be defined.
        Furthermore, if you are in a position to do so, please consider donating to us to continue
        and improve this project. We are not a major nonprofit organization, so we currently have no
        funding and limited resources (e.g only one person is developing all the software).
        \n\n
        To conclude, if you would like to contribute content to an existing dictionary, create
        a brand new dictionary, join a test group or to support us in some other way, feel free to email
        88developers@gmail.com!
        \n\n
        If something isn\'t working or if you have any questions or suggestions, free free to
        email me as well!

        \n\n
        Version 11
    </string>
    <string name="desc_pronounciation">Pronunciation: </string>
    <string name="definition">Definition: </string>
    <string name="desc_category">Category: </string>
    <string name="desc_example">Example: </string>
    <string name="desc_source">Source: </string>
    <string name="bhutia_eng_trans">English Translation: </string>
    <string name="bhutia_bhutia_inf_trans">Bhutia (Informal): </string>
    <string name="bhutia_bhutiascript_form_trans">Bhutia Script (Formal): </string>
    <string name="bhutia_bhutiascript_inf_trans">Bhutia Script (Informal): </string>
    <string name="bhutia_bhutia_form_trans">Bhutia (Formal): </string>
</resources>
