...
        android:id="@+id/anchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/textview_hero_dictionary_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/anchor"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/alegreya_sans"
        android:paddingBottom="40dp"
...
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:background="@drawable/border_left">

            <ImageButton
                android:id="@+id/imagebutton_home_translations"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@drawable/outline_menu_grey_48"
               />

...
