<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp">
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recyclerview_translations"
       android:layout_width="match_parent"
       android:layout_height="200dp"/>
</RelativeLayout>